--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,6 +7,12 @@
         "matriks.h": "c",
         "mesincommand.h": "c",
         "string.h": "c",
-        "mesinkarinput.h": "c"
-    }
+        "mesinkarinput.h": "c",
+        "mesinkar.h": "c",
+        "stdlib.h": "c",
+        "boolean.h": "c",
+        "stage.h": "c",
+        "point.h": "c"
+    },
+    "C_Cpp.dimInactiveRegions": false
 }
