--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,7 +12,10 @@
         "stdlib.h": "c",
         "boolean.h": "c",
         "stage.h": "c",
-        "point.h": "c"
+        "point.h": "c",
+        "mesinkatakomparasi.h\u0000arasi.h": "c",
+        "mesinkatakomparasi.h\u0000omparasi.h": "c",
+        "mesinkatakomparasi.h\u0000rasi.h": "c"
     },
     "C_Cpp.dimInactiveRegions": false
 }
